--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,24 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+/* animasi saat memasuki bagian tertentu */
+.animation-hover:after,
+.animation-active:after {
+  background: none repeat scroll 0 0 transparent;
+  content: "";
+  height: 2px;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  @apply w-0 bg-orange-500 left-1/2 block bottom-0 absolute;
+}
+
+.animation-hover:hover:after,
+.animation-active:after {
+  @apply left-0 w-full;
+}
+
+.text-green {
+  @apply text-emerald-500;
+}
 
 @layer utilities {
   .text-balance {
