add: gallery section(still need fix) and fix: footer gmaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,4 +51,14 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .container {
+    @apply max-w-full;
+  }
+
+  @screen lg {
+    .container {
+      max-width: 90%;
+    }
+  }
 }
