--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
 /* animasi saat memasuki bagian tertentu */
 .animation-hover:after,
 .animation-active:after {
@@ -40,11 +41,24 @@ body {
   @apply left-0 w-full;
 }
 
+/* end animasi */
+
 .primary-yellow {
   color: #ffcc00;
 }
 .text-green {
   @apply text-emerald-500;
+}
+
+/* Slideshow */
+.slick-dots li {
+  @apply inline-block;
+}
+.slick-dots span {
+  @apply bg-gray-400;
+}
+.slick-dots .slick-active span {
+  @apply bg-emerald-500 rounded-l-full rounded-r-full w-10;
 }
 
 @layer utilities {
